--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -4,29 +4,20 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/logintoaccount"
     tools:context=".SignInActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="270dp"
         android:layout_marginStart="30dp"
-        android:layout_marginTop="40dp"
         android:layout_marginEnd="30dp"
-        android:layout_marginBottom="40sp"
+        android:layout_marginBottom="50dp"
         android:gravity="center"
         android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        >
-
-        <ImageView
-            android:id="@+id/imageView3"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            app:srcCompat="@drawable/finallogo" />
+        app:layout_constraintStart_toStartOf="parent">
 
         <EditText
             android:id="@+id/et_mail_id"
@@ -34,7 +25,7 @@
             android:layout_height="wrap_content"
             android:layout_margin="10dp"
             android:layout_weight="1"
-            android:background="@color/white"
+            android:background="@drawable/bg_edit_text"
             android:ems="10"
             android:hint="E-Mail"
             android:inputType="textEmailAddress"
@@ -46,7 +37,7 @@
             android:layout_height="wrap_content"
             android:layout_margin="10dp"
             android:layout_weight="1"
-            android:background="@color/white"
+            android:background="@drawable/bg_edit_text"
             android:ems="10"
             android:hint="Password"
             android:inputType="textPassword"
@@ -57,19 +48,18 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="right"
+            android:textColor="@color/white"
+            android:fontFamily="sans-serif-black"
             android:layout_weight="1"
             android:padding="9dp"
             android:text="New User? Sign Up" />
 
         <Button
             android:id="@+id/btn_sign_in"
-            android:layout_width="wrap_content"
-            android:layout_height="20dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             android:layout_weight="1"
             android:backgroundTint="@color/design_default_color_primary"
-            android:padding="15dp"
-            android:paddingStart="30dp"
-            android:paddingEnd="30dp"
             android:text="SIGN IN"
             android:textSize="18sp"
             app:cornerRadius="35dp" />
