--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -2,7 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-
+    android:background="@drawable/createnewaccount"
 
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -10,25 +10,15 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="400dp"
         android:layout_marginStart="30dp"
-        android:layout_marginTop="40dp"
         android:layout_marginEnd="30dp"
-        android:layout_marginBottom="40sp"
+        android:layout_marginBottom="50dp"
         android:gravity="center"
         android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        >
-
-        <ImageView
-            android:id="@+id/imageView3"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            app:srcCompat="@drawable/finallogo" />
+        app:layout_constraintStart_toStartOf="parent">
 
         <EditText
             android:id="@+id/et_user_name"
@@ -36,7 +26,7 @@
             android:layout_height="wrap_content"
             android:layout_margin="10dp"
             android:layout_weight="1"
-            android:background="@color/white"
+            android:background="@drawable/bg_edit_text"
             android:ems="10"
             android:hint="Username"
             android:inputType="text"
@@ -48,7 +38,7 @@
             android:layout_height="wrap_content"
             android:layout_margin="10dp"
             android:layout_weight="1"
-            android:background="@color/white"
+            android:background="@drawable/bg_edit_text"
             android:ems="10"
             android:hint="E-Mail"
             android:inputType="textEmailAddress"
@@ -60,7 +50,7 @@
             android:layout_height="wrap_content"
             android:layout_margin="10dp"
             android:layout_weight="1"
-            android:background="@color/white"
+            android:background="@drawable/bg_edit_text"
             android:ems="10"
             android:hint="Password"
             android:inputType="textPassword"
@@ -72,13 +62,15 @@
             android:layout_height="wrap_content"
             android:layout_gravity="right"
             android:layout_weight="1"
+            android:textColor="@color/white"
+            android:fontFamily="sans-serif-black"
             android:padding="9dp"
             android:text="Already have an account?" />
 
         <Button
             android:id="@+id/btn_sign_up"
-            android:layout_width="wrap_content"
-            android:layout_height="30dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             android:layout_weight="1"
             android:backgroundTint="@color/design_default_color_primary"
             android:padding="15dp"
@@ -94,8 +86,8 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:fontFamily="sans-serif-medium"
+            android:textColor="@color/white"
             android:text="Sign Up using Phone"
-            android:textColor="@color/design_default_color_primary"
             android:textSize="18sp" />
 
     </LinearLayout>
