--- a/app/src/main/res/layout/sample_user_show.xml
+++ b/app/src/main/res/layout/sample_user_show.xml
@@ -11,6 +11,8 @@
         android:layout_width="66dp"
         android:layout_height="66dp"
         android:layout_margin="7dp"
+        app:civ_border_color="#FF000000"
+        app:civ_border_width="2dp"
         android:src="@drawable/pfp"
          />
 
