--- a/app/src/main/res/layout/activity_about.xml
+++ b/app/src/main/res/layout/activity_about.xml
@@ -72,7 +72,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="20dp"
-            android:text="A BTech student At The LNM Institute of Information Technology, let's connect.."
+            android:text="A Btech student at The LNM Institute of Information Technology, let's connect.."
             android:textSize="16sp" />
 
 
