--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -8,5 +8,9 @@
         android:id="@+id/log_out"
         android:title="Logout"
         android:visible="true" />
+    <item
+        android:id="@+id/delete_account"
+        android:title="Delete Account"
+        android:visible="true" />
 
 </menu>
